// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default page when there is not page match 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    location={
      Object {
        "pathname": "/",
      }
    }
    logo={undefined}
    title={undefined}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Page
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders first page at index if found 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    location={
      Object {
        "pathname": "/",
      }
    }
    logo={undefined}
    title={undefined}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Page
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders matched page 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    logo={undefined}
    title={undefined}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/foo"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <foo
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders renders index if firstPagePath specified but not actually in markdown map 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    location={
      Object {
        "pathname": "/",
      }
    }
    logo={undefined}
    title={undefined}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Page
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;
